Add Bootstrap to project

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,6 @@
+{{#link-to "application"}}DakkaDB{{/link-to}}
+{{#link-to "myDecks"}}My Decks{{/link-to}}
+{{#link-to "decklists"}}Decklists{{/link-to}}
+{{#link-to "cards"}}Cards{{/link-to}}
+{{#link-to "factions"}}Factions{{/link-to}}
 {{outlet}}
