--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,44 @@
-{{#link-to "application"}}DakkaDB{{/link-to}}
-{{#link-to "myDecks"}}My Decks{{/link-to}}
-{{#link-to "decklists"}}Decklists{{/link-to}}
-{{#link-to "cards"}}Cards{{/link-to}}
-{{#link-to "factions"}}Factions{{/link-to}}
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">DakkaDB</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li>{{#link-to "myDecks"}}My Decks{{/link-to}}</li>
+                <li>{{#link-to "decklists"}}Decklists{{/link-to}}</li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Factions <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li>{{#link-to "factions.spaceMarines"}}Space Marines{{/link-to}}</li>
+                        <li>{{#link-to "factions.astraMilitarum"}}Astra Militarum{{/link-to}}</li>
+                        <li>{{#link-to "factions.ork"}}Ork{{/link-to}}</li>
+                        <li>{{#link-to "factions.chaos"}}Chaos{{/link-to}}</li>
+                        <li>{{#link-to "factions.darkEldar"}}Dark Eldar{{/link-to}}</li>
+                        <li>{{#link-to "factions.eldar"}}Eldar{{/link-to}}</li>
+                        <li>{{#link-to "factions.tau"}}Tau{{/link-to}}</li>
+                        <li>{{#link-to "factions.tyranids"}}Tyranids{{/link-to}}</li>
+                        <li>{{#link-to "factions.necrons"}}Necrons{{/link-to}}</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <form class="navbar-form navbar-right">
+                        <input type="text" class="form-control" placeholder="Card Search...">
+                    </form>
+                </li>
+                <li>{{#link-to "register"}}Register{{/link-to}}</li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+</nav>
+
 {{outlet}}
