add forum route

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -28,13 +28,15 @@
                         <li>{{#link-to "factions.necrons"}}Necrons{{/link-to}}</li>
                     </ul>
                 </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <form class="navbar-form navbar-right">
+                    <form class="navbar-form">
                         <input type="text" class="form-control" placeholder="Card Search...">
                     </form>
                 </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>{{#link-to "forum"}}Forum{{/link-to}}</li>
+
                 <li>{{#link-to "register"}}Register{{/link-to}}</li>
             </ul>
         </div><!--/.nav-collapse -->
