--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -37,7 +37,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>{{#link-to "forum"}}Forum{{/link-to}}</li>
 
-                <li>{{#link-to "register"}}Register{{/link-to}}</li>
+                <li>{{#link-to "login"}}Login{{/link-to}}</li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
